<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sebastian.soundmood.Fragments.MainFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:paddingStart="12dp"
                android:paddingTop="12dp"
                android:text="@string/title1"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView2Top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:paddingBottom="10dp"
                android:paddingStart="12dp"
                android:text="@string/subtitle1"
                android:textColor="#A4A4A4"
                android:textSize="14sp" />

            <FrameLayout
                android:id="@+id/container_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>

            <TextView
                android:id="@+id/textViewMid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:paddingStart="12dp"
                android:paddingTop="12dp"
                android:text="@string/title2"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView2Mid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:paddingBottom="10dp"
                android:paddingStart="12dp"
                android:text="@string/subtitle2"
                android:textColor="#A4A4A4"
                android:textSize="14sp" />

            <FrameLayout
                android:id="@+id/container_mid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>

            <TextView
                android:id="@+id/textViewBot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:paddingStart="12dp"
                android:paddingTop="12dp"
                android:text="@string/title3"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView2Bot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:paddingBottom="10dp"
                android:paddingStart="12dp"
                android:text="@string/subtitle3"
                android:textColor="#A4A4A4"
                android:textSize="14sp" />

            <FrameLayout
                android:id="@+id/container_bot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</FrameLayout>
